# aws-crt-python

./: .gitignore  .gitmodules  .lgtm.yml  .packit.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  benchmark_cbor.py  boto3_download_test.py  boto3_python.py  botocore_s3.py  botocore_test.py  build-deps.sh  builder.json  crc_profile.py  dummyfile  elasticurl.py  elastipyrl.py  foo.txt  format-check.py  format-check.sh  get_object_test_1MB.txt  http_test.py  http_test_body.txt  local-test.py  log.txt  make-docs.sh  mqtt_test.py  native_python_http_test.py  pyproject.toml  requirements-dev.txt  s3_benchmark.py  s3_example.py  s3_sample.py  server_test.py  setup.py  test.py  (+1 more)
.builder/actions/: __init__.py  aws-crt-python.py  aws_crt_python.py  manylinux-ci.py  manylinux1-ci.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/actions/al2-x64/: Dockerfile  action.yml  entrypoint.sh
.github/images/al2-x64/: Dockerfile
.github/workflows/: CI.yml  ci.yml  codeql.yml  docker-images.yml  docs.yml  handle-stale-discussions.yml  lint.yml  linux-ci-action.yml  linux-ci-build.yml  linux-ci-self-hosted.yml  linux-ci.yml  mac-osx-ci.yml  manylinux1-ci.yml  manylinux1-x64-ci.yml  stale_issue.yml  ubuntu-16-ci.yml
aws_crt/: __init__.py  io.py  iot.py  mqtt.py
aws_crt_python/: __init__.py  io.py  iot.py  mqtt.py
awscrt/: __init__.py  _aws_iot_metrics.py  _c_lib_importer.py  _test.py  auth.py  aws_iot_metrics.py  awsiot_mqtt_connection_builder.py  cbor.py  cbor_shape.py  checksums.py  common.py  config.py  crt_http_test.py  crypto.py  deprecation.py  eventstream.py  exceptions.py  http.py  http_asyncio.py  io.py  iot_metrics.py  logging.py  mqtt.py  mqtt5.py  mqtt_request_response.py  s3.py  s3_client.py  websocket.py
awscrt/aio/: __init__.py  aiohttp.py  http.py  http_asyncio.py
awscrt/eventstream/: __init__.py  rpc.py
codebuild/: CanaryWrapper_Classes.py  ancient-linux-x64.yml  ancient-linux-x86.yml  common-linux-setup-mosquitto.sh  common-linux.sh  common-macos.sh  common-windows.bat  linux-clang3-x64.yml  linux-clang6-x64.yml  linux-gcc-4x-x64.yml  linux-gcc-4x-x86.yml  linux-gcc-5x-x64.yml  linux-gcc-6x-x64.yml  linux-gcc-7x-x64.yml  linux-integration-tests.sh  linux-integration-tests.yml  mqtt5-python-canary-test.sh  mqtt5-python-canary-test.yml  mqtt5_test_setup.sh  test-config-on-failure.py  test-sys-install-mode.sh  windows-msvc-2015-x86.yml  windows-msvc-2015.yml  windows-msvc-2017.yml
codebuild/cd/: manylinux-x64-build.yml  manylinux-x86-build.yml  manylinux1-tee.yml  publish_to_prod_pypi.yml  publish_to_test_pypi.yml  raspberry-bullseye-build.yml  test_prod_pypi.yml  test_test_pypi.yml  test_version_exists.yml  windows-tee.yml
continuous-delivery/: build-wheels-manylinux2014-aarch64-jenkins.sh  build-wheels-manylinux2014-aarch64.sh  build-wheels-manylinux2014-arm.sh  build-wheels-manylinux2014-x86_64-jenkins.sh  build-wheels-manylinux2014-x86_64.sh  build-wheels-musllinux-1-1-aarch64-jenkins.sh  build-wheels-musllinux-1-1-aarch64.sh  build-wheels-musllinux-1-1-x86_64-jenkins.sh  build-wheels-musllinux-1-1-x86_64.sh  build-wheels-osx.sh  build-wheels-raspberry-bullseye-arm7l-jenkins.sh  build-wheels-raspberry-bullseye-arm7l.sh  build-wheels-win32.bat  build-wheels-win32.ps1  build-wheels-win64.bat  build-wheels-win64.ps1  pull-pypirc  pull-pypirc.py  sanity-check-test-pypi.bat  sanity-check-test-pypi.sh  test-pip-install.py  test-version-exists  update-version.py  wait-for-pypi.py
crt/: CMakeLists.txt
docs/: .buildinfo  README.md  awscrt.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: awscrt.rst.txt  index.rst.txt  modules.rst.txt
docs/_static/: basic.css  bizstyle.css  bizstyle.js
docs/api/: auth.html  aws_iot_metrics.html  checksums.html  common.html  crypto.html  eventstream.html  eventstream.rpc.html  exceptions.html  http.html  io.html  mqtt.html  mqtt5.html  mqtt_connection_builder.html  mqtt_request_response.html  s3.html  websocket.html
docs/dev/: README.md  writing-code.md
docs/source/: conf.py  index.rst
docsrc/source/: conf.py  index.rst
examples/: http2_asyncio_demo.py  http_asyncio_demo.py
fedora/: python-awscrt.spec  skip-test-requiring-network.patch
guides/: README.md
guides/dev/: README.md
scripts/: clean.py  format-all.py  format-c.py  format-py.py  format-python.py  install-dev.py  install-python310.sh  make-docs.py  make-docs.sh  mqtt5_test_setup.sh  test_runner.py  utils.py
source/: auth.h  auth_credentials.c  auth_signer.c  auth_signing_config.c  cbor.c  cbor.h  checksums.h  common.c  common.h  crc.c  crypto.c  crypto.h  event_stream.h  event_stream_headers.c  event_stream_rpc_client_connection.c  event_stream_rpc_client_continuation.c  http.h  http_client_connection.c  http_client_connection.h  http_connection.c  http_connection.h  http_headers.c  http_message.c  http_monitoring_options.c  http_proxy.c  http_server.c  http_server.h  http_stream.c  http_stream.h  io.c  io.h  module.c  module.h  mqtt.c  mqtt.h  mqtt5_client.c  mqtt5_client.h  mqtt5_listener.c  mqtt5_listener.h  mqtt_client.c  (+14 more)
test/: __init__.py  appexit_http.py  mqtt5_canary.py  test_aiohttp_client.py  test_appexit.py  test_auth.py  test_aws_iot_metrics.py  test_cbor.py  test_checksums.py  test_common.py  test_credentials.py  test_crypto.py  test_eventstream.py  test_eventstream_rpc.py  test_exceptions.py  test_http_asyncio.py  test_http_client.py  test_http_connection_lifetime.py  test_http_headers.py  test_http_server.py  test_io.py  test_mqtt.py  test_mqtt5.py  test_mqtt5_canary.py  test_mqtt5_credentials.py  test_mqtt5to3_adapter.py  test_mqtt_credentials.py  test_mqtt_request_response.py  test_proxy.py  test_s3.py  test_server.py  test_websocket.py  ws_connect_helper.py
test/files/: short.txt
test/resources/: ca.crt  credentials_test  crt.unittests.crt  crt.unittests.key  crt.unittests.p12  decode-success-tests.json  example_config  example_profile  rootCA.crt  unittest.crt  unittest.key  unittest.p12
tests/: server_test.py
(+41 files in other folders)
